--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -11,8 +11,7 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:id="@+id/toolbar"
-        style="@style/Base.CardView"/>
+        android:id="@+id/toolbar" />
 
     <FrameLayout
         android:layout_width="match_parent"
