--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_container"
@@ -8,5 +9,4 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     app:defaultNavHost="true"
-    app:navGraph="@navigation/nav_graph"
-    tools:context=".MainActivity" />
+    app:navGraph="@navigation/nav_graph" />
