--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -8,12 +8,28 @@
     android:layout_width="match_parent"
     android:orientation="horizontal">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:layout_margin="20dp"
-        android:id="@+id/title"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="20dp"
+            android:id="@+id/title"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_margin="20dp"
+            android:id="@+id/content"/>
+
+    </LinearLayout>
+
+
 
     <ImageButton
         android:layout_width="wrap_content"
