--- a/app/src/main/res/layout/fragment_image_add.xml
+++ b/app/src/main/res/layout/fragment_image_add.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImageAddFragment">
+    tools:context=".Image.ImageAddFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:orientation="vertical"
-        tools:context=".TextAddFragment">
+        tools:context=".Note.TextAddFragment">
 
 
         <EditText
